--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "trdb",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Tobias Rapid Database",
   "main": "src/trdb.js",
   "bin": "./bin/trdb.cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/TobiasNickel/trdb/issues"
   },
-  "homepage": "https://github.com/TobiasNickel/trdb#readme"
+  "homepage": "https://github.com/TobiasNickel/trdb#readme",
+  "devDependencies": {
+    "@types/node": "^14.11.8"
+  }
 }
