--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
+        "allowJs": true,
         "checkJs": true,
-        "target": "es2017"
+        "target": "es2017",
+        "outDir": "dist"
     }
 }
