--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/trdb.js",
   "bin": "./bin/trdb.cli.js",
   "scripts": {
-    "test": "node test/test.js"
+    "build": "tsc",
+    "test": "npm run build && nyc --reporter=lcov node test/test.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,9 @@
   },
   "homepage": "https://github.com/TobiasNickel/trdb#readme",
   "devDependencies": {
-    "@types/node": "^14.11.8"
-  }
+    "@types/node": "^14.11.8",
+    "nyc": "^15.1.0",
+    "typescript": "^4.0.3"
+  },
+  "type": "commonjs"
 }
